force-app/main/default/objects/SlaTracking__c/SlaTracking__c.object-meta.xml
<CustomObject>
    <label>Tracciamento SLA</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>Tracciamento SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracciamento SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>