force-app/main/default/objects/SlaTracking__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>Tracciamento SLA</relationshipLabel>
    <relationshipName>SlaTrackings</relationshipName>
    <type>Lookup</type>
</CustomField>