force-app/main/default/objects/SlaTracking__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>SlaAdministration__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrizione</label>
    <type>Text</type>
</CustomField>