force-app/main/default/objects/SlaTracking__c/fields/EndDateSolarDays__c.field-meta.xml
<CustomField>
    <fullName>EndDateSolarDays__c</fullName>
    <inlineHelpText>Previsione della data di fine lavorazione calcolata in giorni solari</inlineHelpText>
    <label>Data fine [gg solari]</label>
    <type>Date</type>
</CustomField>