force-app/main/default/objects/SlaTracking__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <inlineHelpText>Data effettiva di fine lavorazione</inlineHelpText>
    <label>Data fine intervallo</label>
    <type>DateTime</type>
</CustomField>