force-app/main/default/objects/SlaTracking__c/fields/EndDateWorkingDays__c.field-meta.xml
<CustomField>
    <fullName>EndDateWorkingDays__c</fullName>
    <inlineHelpText>Previsione della data di fine lavorazione calcolata in giorni lavorativi</inlineHelpText>
    <label>Data fine [gg lavorativi]</label>
    <type>Date</type>
</CustomField>