force-app/main/default/objects/SlaTracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Tracciamento SLA</relationshipLabel>
    <relationshipName>SlaTrackings</relationshipName>
    <type>Lookup</type>
</CustomField>