force-app/main/default/objects/SlaTracking__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <formula>SlaAdministration__r.Range__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Intervallo SLA indicato nella regola</inlineHelpText>
    <label>Intervallo SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>