force-app/main/default/objects/SlaTracking__c/fields/RangeType__c.field-meta.xml
<CustomField>
    <fullName>RangeType__c</fullName>
    <formula>IF(ISPICKVAL(SlaAdministration__r.RangeType__c, &apos;Giorni Solari&apos;),&apos;Giorni Solari&apos;,&apos;Giorni Lavorativi&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo intervallo</label>
    <type>Text</type>
</CustomField>