force-app/main/default/objects/SlaTracking__c/fields/SlaAdministration__c.field-meta.xml
<CustomField>
    <fullName>SlaAdministration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amministrazione SLA</label>
    <referenceTo>SlaAdministration__c</referenceTo>
    <relationshipLabel>Tracciamento SLA</relationshipLabel>
    <relationshipName>SlaTrackings</relationshipName>
    <type>Lookup</type>
</CustomField>