force-app/main/default/objects/SlaTracking__c/fields/SlaName__c.field-meta.xml
<CustomField>
    <fullName>SlaName__c</fullName>
    <formula>SlaAdministration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome SLA</label>
    <type>Text</type>
</CustomField>