force-app/main/default/objects/SlaTracking__c/fields/SlaValue__c.field-meta.xml
<CustomField>
    <fullName>SlaValue__c</fullName>
    <inlineHelpText>Indica il tempo di lavorazione in giorni alla chiusura del tracking</inlineHelpText>
    <label>Tempo gestione [gg]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>