force-app/main/default/objects/SlaTracking__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Data inizio intervallo</label>
    <type>DateTime</type>
</CustomField>