force-app/main/default/objects/SlaTracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aperto</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>