force-app/main/default/objects/SlaTracking__c/fields/TodaySlaValue__c.field-meta.xml
<CustomField>
    <fullName>TodaySlaValue__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Chiuso&apos;),
 SlaValue__c,			
 IF(ISPICKVAL(SlaAdministration__r.RangeType__c, &apos;Giorni Solari&apos;),
				(EndDateSolarDays__c - DATEVALUE(StartDateTime__c)) - (EndDateSolarDays__c - DATEVALUE(NOW())),
				(EndDateWorkingDays__c - DATEVALUE(StartDateTime__c)) - (EndDateWorkingDays__c - DATEVALUE(NOW()))
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Intervallo SLA</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>